<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codeneitor.contactosandroid.ContactoActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:id="@+id/cv_contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_confirmar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmar"
                        android:textAlignment="center"
                        android:textSize="@dimen/titulos"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/ttl_pad_top">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/tv_nombre"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/nombre_muestra"
                                android:inputType="text" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_nombre"
                                android:hint="@string/fecha2"
                                android:inputType="date" />
                            <TextView
                                android:id="@+id/tv_fecha"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fecha_muestra"
                                android:layout_marginLeft="@dimen/margin_left"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_fecha"
                                android:hint="@string/telefono2"
                                android:inputType="text" />
                            <TextView
                                android:id="@+id/tv_telefono"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/telefono_muestra"
                                android:layout_marginLeft="@dimen/margin_left"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_telefono"
                                android:hint="@string/email2"
                                android:inputType="textEmailAddress" />
                            <TextView
                                android:id="@+id/tv_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email_muestra"
                                android:layout_marginLeft="@dimen/margin_left"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingTop="5dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tv_email"
                                android:hint="@string/descripcion2"
                                android:inputType="text"
                                />
                            <TextView
                                android:id="@+id/tv_descripcion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/descripcion_muestra"
                                android:layout_marginLeft="@dimen/margin_left"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/bt_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_contacto"
            android:text="@string/editar"
            android:theme="@style/btnTheme"
            android:layout_marginTop="@dimen/bt_pad_top"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
